<resources>
    <string name="try_again">Try again</string>
    <string name="dismiss">Dismiss</string>
    <string name="units_summary">Temperature is available in Fahrenheit, Celsius and Kelvin units.</string>
    <string name="unit_format">Units format</string>
    <string name="settings">Settings</string>
    <string name="please_activate_your_location">Please, to continue, let your device turn on location.</string>
    <string name="error_getting_your_location">Error getting your location</string>
    <string name="error_grant_location_permission">Please, to continue grant location permission to get access to your position.</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="sea_level">Sea Level</string>
    <string name="kelvin" translatable="false">Kelvin</string>
    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="celsius" translatable="false">Celsius</string>
    <string name="tap_to_ask">Tap to Ask</string>
    <string name="cancel">Cancel</string>
    <string name="listening">Listening…</string>
    <string name="tap_and_ask">Tap mic</string>
    <string name="the_temperature_is">The temperature is %d degrees.</string>
    <string name="the_wind_is">The wind speed is %d km/h.</string>
    <string name="the_precipitation_not_available">The precipitation is not available!</string>
    <string name="weather_message">%s in %s at %s</string>
    <string name="language">Voice language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="language_summary">Languages available are English, Portuguese and Spanish.</string>
    <string name="voice_example"><i>\"How is the weather in Barcelona?\"\n\"Can you give the temperature and the wind speed?\"\n\"Please, tell me about the precipitation, temperature and wind in Lisbon?\"</i></string>
</resources>
